tests/valid/lexer_keywords_comments.mc
int main() {
    int x;
    bool flag;
    // single line comment
    x = 123;
    /* block
       comment */
    flag = true && false || !false;
    if (x >= 100) {
        write(x);
    }
    return 0;
}
