tests/invalid_semantic/break_outside_loop.mc
int main() {
    int x;
    break;
    return 0;
}
